--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,16 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="primaryText">@color/white</color>
+
+    <color name="pink_50">#FFFCE4EC</color>
+    <color name="pink_100">#FFF8BBD0</color>
+    <color name="pink_300">#F06292</color>
+    <color name="pink_500">#E91E63</color>
+    <color name="pink_600">#D81B60</color>
+    <color name="pink_800">#AD1457</color>
+    <color name="purple_600">#8E24AA</color>
+    <color name="purple_800">#6A1B9A</color>
+
 </resources>
