--- a/app/src/main/res/drawable/ic_summary_background_pink.xml
+++ b/app/src/main/res/drawable/ic_summary_background_pink.xml
@@ -6,6 +6,6 @@
   <path
       android:strokeWidth="1"
       android:pathData="M148,19.814C96.8,-3.213 27.333,-0.359 -1,3.946V82.918C-1,101 -1,92.5 -1,101H411L411,82.918V15.386C346.2,5.053 286.667,22.397 265,32.361C233,17.6 173.667,17.846 148,19.814Z"
-      android:fillColor="@color/pink_800"
-      android:strokeColor="@color/pink_800"/>
+      android:fillColor="@color/pink_theme"
+      android:strokeColor="@color/pink_theme"/>
 </vector>
