--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,15 +8,26 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="primaryText">@color/white</color>
+    <color name="text">#091451</color>
+    <color name="primaryText">@color/text</color>
 
     <color name="pink_50">#FFFCE4EC</color>
-    <color name="pink_100">#FFF8BBD0</color>
+    <color name="pink_100">#F8BBD0</color>
     <color name="pink_300">#F06292</color>
+    <color name="pink_400">#EC407A</color>
     <color name="pink_500">#E91E63</color>
     <color name="pink_600">#D81B60</color>
     <color name="pink_800">#AD1457</color>
+    <color name="purple_100">#E1BEE7</color>
+    <color name="purple_300">#BA68C8</color>
+    <color name="purple_400">#AB47BC</color>
     <color name="purple_600">#8E24AA</color>
     <color name="purple_800">#6A1B9A</color>
+
+    <color name="pink_1300">#FCCEDF</color>
+    <color name="purple_1300">#D0B1FE</color>
+
+    <color name="pink_theme">@color/pink_1300</color>
+    <color name="purple_theme">@color/purple_1300</color>
 
 </resources>
